# Custom-Ray-Tracer

./: CIE_xyz.csv  CMakeLists.txt  README.md  flowerScene.txt  homunculus.txt  scene.txt  sceneDemo.txt  testscene2.txt
src/: color.h  config.h  helper.cpp  helper.h  intersection.cpp  intersection.h  lighting.cpp  lighting.h  main.cpp  rayData.h  renderer.cpp  renderer.h  viewport.cpp  viewport.h
